# stones

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  machine.rs  node.rs  persistence.rs  transport.rs
raft/: Cargo.toml
raft/src/: client.rs  effects.rs  entry.rs  lib.rs  protocol.rs  rpc.rs  state.rs
