[package]
name = "stones-raft"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
stones-core = { path = "../core" }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt"]}

[lints]
workspace = true
